# adversarial_example_of_Go

./: CMakeLists.txt  Move.h  NN_Result.h  Programs.h  README.md  SgfLoader.h  adv_example.h  chineseREADME.md  game11  main.cpp  policy_handler.h  test.sgf
dataset/ATV/: ATV_1.sgf  ATV_10.sgf  ATV_12.sgf  ATV_13.sgf  ATV_14.sgf  ATV_4.sgf  ATV_5.sgf  ATV_8.sgf  ATV_9.sgf
dataset/AlphaGo_Zero_selfplay(ZZ)/: Game_001.sgf
dataset/FOX/: 10k_1.sgf  10k_2.sgf  11k_1.sgf  11k_2.sgf  12k_1.sgf  12k_2.sgf  13k_1.sgf  13k_2.sgf  14k_1.sgf  14k_2.sgf  15k_1.sgf  15k_2.sgf  16k_1.sgf  16k_2.sgf  17k_1.sgf  17k_2.sgf  18k_1.sgf  18k_2.sgf  1D_1.sgf  1D_2.sgf  1k_1.sgf  1k_2.sgf  2D_1.sgf  2D_2.sgf  2k_1.sgf  2k_2.sgf  3D_1.sgf  3D_2.sgf  3k_1.sgf  3k_2.sgf  4D_1.sgf  4D_2.sgf  4k_1.sgf  4k_2.sgf  5D_1.sgf  5D_2.sgf  5k_1.sgf  5k_2.sgf  6D_1.sgf  6D_2.sgf  (+14 more)
dataset/LG/: LG_0.sgf  LG_1.sgf  LG_10.sgf  LG_11.sgf  LG_12.sgf  LG_13.sgf  LG_14.sgf  LG_15.sgf  LG_16.sgf  LG_17.sgf  LG_18.sgf  LG_19.sgf  LG_2.sgf  LG_20.sgf  LG_21.sgf  LG_3.sgf  LG_4.sgf  LG_5.sgf  LG_6.sgf  LG_7.sgf  LG_8.sgf  LG_9.sgf
examples/mcts/mcts100/: Game_004.sgf.tkskm100_p_0.5.sgf  Game_007.sgf.tkskm100_p_0.5.sgf  Game_010.sgf.tkskm100_p_0.5.sgf  Game_011.sgf.tkskm100_v_0.5.sgf  Game_017.sgf.tkskm100_v_0.5.sgf  Game_020.sgf.tkskm100_v_0.5.sgf
examples/pvnn/dl/: 2k_1.sgf.tksk_p0.9.sgf  (+7 more)
sgf/ATV/: ATV_0.sgf  ATV_11.sgf  ATV_15.sgf  ATV_16.sgf  ATV_17.sgf  ATV_18.sgf  ATV_19.sgf  ATV_2.sgf  ATV_3.sgf  ATV_6.sgf  ATV_7.sgf
source/: LookupTable.h  MCTS_Result.h  Programs.h  adv_example.h  base_client.h  fight.h
(+55 files in other folders)
